--- a/src.conf
+++ b/src.conf
@@ -1,9 +1,8 @@
 KERNCONF=${FREEBSD_KERNCONF}
 
-# Build the integrated toolchain for now so we get KASAN support.
-# TODO: submit port patches for this so we can use the external toolchain.
-#CROSS_TOOLCHAIN=${TOOLCHAIN}
-#WITHOUT_TOOLCHAIN=
-WITHOUT_LLDB=
+# TODO: submit llvm ports patches so that we can enable kernel
+# sanitizers using the external toolchain.
+CROSS_TOOLCHAIN=${TOOLCHAIN}
+WITHOUT_TOOLCHAIN=
 WITHOUT_LIB32=
 WITHOUT_PROFILE=
